Align figcaption center (fix #113)

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,3 +22,7 @@
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff;
 }
+
+figcaption {
+    text-align: center;
+}
